Fix User Modal on Mobile Device

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -320,6 +320,16 @@
             &__icon-open {
                 display: block;
             }
+
+            &__user {
+                &__info {
+                    padding: 1.3rem 0 0 1rem;
+
+                    &__title {
+                        padding-bottom: 1.5rem;
+                    }
+                }
+            }
         }
     }
     .cart__link {
