--- a/src/sass/_info-user.scss
+++ b/src/sass/_info-user.scss
@@ -55,7 +55,7 @@
         img {
             width: 10rem;
             height: 10rem;
-            margin-right: 2rem;
+            margin: 0 auto 2rem;
         }
 
         &__group {
